--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
+<h3 align="center">Wir treffen uns zum 1. Lauf um den Jahrespokal des EMC<br>
+  am Ostermontag, den 22. April 2019<br>
+  und freuen uns bei gutem Wetter auf viele Besucher!</h3>
+
 <p align="center"><font color="#FF0000"><b>
   Schwein gehabt !
 </b></font></p>
