--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@ description: Bitte geben Sie das Passwort ein.
 <!--             Login-Bereich für interne Vereinsnachrichten                -->
 <!----------------------------------------------------------------------------->
 
-<!-- Eigabebox für das Passwort -->
+<!-- Eingabebox für das Passwort -->
 <form name="passwort" class="password-box">
   <input type="password" name="pswd" id="login-password">
   <label class="show-password-label" for="show-password">
