--- a/index.html
+++ b/index.html
@@ -8,6 +8,68 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
+<p align="center"><font color="#FF0000"><b>
+  Der Termin für das 2. Rennen wurde nun endgültig auf <br>
+  Sonntag, den 26. Mai festgelegt!
+</b></font></p>
+
+<h3 align="center">1. Lauf um den Jahrespokal des EMC am 22. April 2019</h3>
+
+<p align="justify">
+  Der 1. Lauf zum EMC Pokal wurde traditionell am Ostermontag durchgeführt. An
+  diesem 22. April waren 8 Fahrer in der Goggo-Klasse und 5 Fahrer in der
+  Kartklasse zum Start angetreten. Die Kartklasse wurde durch zwei Gastfahrer
+  aus dem Sauerland verstärkt, sodass wir bei sommerlichen Temperaturen den
+  zahlreich erschienenen Zuschauern einen spannenden Renn-Nachmittag auf unserer
+  Bahn bieten konnten. Ein weiteres Highlight war die Vorstellung eines neu
+  aufgebauten Aufsitz-Rasenmähers von Matthias Schulte-Bocholt, mit diesem
+  Fahrzeug mit ca. 70 PS wird er auch in diesem Jahr wieder bei den
+  Rasenmäher-Rennen antreten.
+</p>
+
+<p align="justify">
+  In der Goggo-Klasse beherrschte Matthias Schulte-Bocholt das Training und fuhr
+  bei den Rennen zwei Start-Ziel-Siege ein. Frank Langenhorst belegte im ersten
+  Lauf den 2. Platz, fiel aber im zweiten Lauf aus und konnte daher dieses gute
+  Ergebnis für den Tagessieg nicht umsetzen. Nach den Platzierungen im zweiten
+  Lauf ergaben sich die Tagessieger wie unten dargestellt.
+
+</p>
+
+<p align="justify">
+  In der Kartklasse lag Benjamin Schneider nach dem Training vorn und konnte
+  ebenfalls zwei Start-Ziel-Siege einfahren. Victor Roh belegte jeweils den
+  zweiten Platz. Die Gastfahrer aus dem Sauerland fanden sich mit unserer Bahn
+  gut zurecht, konnten in allen Läufen gut mithalten und bereicherten das Bild
+  in der Kartklasse. Mit dem 3. und 4. Platz zeigten sie eine gute Leistung.
+  Unser Stammfahrer Hartmut Kehring fiel im zweiten Lauf mit Bremsproblemen aus
+  und landete auf dem 5. Platz.
+</p>
+
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.04.22_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2019.04.22_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Christoph Markfort</li>
+   		<li>3. Jonas Schulte-Greving</li>
+   		<li>4. Stefan Hussmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Mike Brüggemann</li>
+      <li>4. Sebastian Bergendahl</li>
+   </ul>
+</div>
+
 <h3 align="center">Wir treffen uns zum 1. Lauf um den Jahrespokal des EMC<br>
   am Ostermontag, den 22. April 2019<br>
   und freuen uns bei gutem Wetter auf viele Besucher!</h3>
