--- a/termine.html
+++ b/termine.html
@@ -38,7 +38,7 @@ description:
       <tr>
         <td>Mai</td>
         <td>2. Mai</td>
-        <td>25./26. Mai oder 29./30.Juni</td>
+        <td>26. Mai</td>
       </tr>
       <tr>
         <td>Juni</td>
