--- a/index.html
+++ b/index.html
@@ -8,13 +8,52 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
-<p align="center"><font color="#FF0000"><b>
-  Der Termin für das 2. Rennen wurde nun endgültig auf <br>
-  Sonntag, den 26. Mai festgelegt!
-</b></font></p>
+<h3 align="center">2. Lauf um den Jahrespokal des EMC am 26. Mai 2019</h3>
+<p align="justify">
+  Der 2. Lauf zum EMC Pokal wurde am 26. Mai durchgeführt. 6 Fahrer gingen in
+  der Goggo-Klasse und 3 Fahrer in der Kartklasse an den Start. Bei sommerlichem
+  Wetter mit Temperaturen knapp über 20 Grad waren optimale Bedingungen für
+  Fahrer und Fahrzeuge gegeben.
+</p>
+<p align="justify">
+  In der Goggo-Klasse war Hubert Volks nach längerer Pause wieder angetreten und
+  konnte sich in beiden Läufen auf einem guten zweiten Platz positionieren.
+  Leider musste er den zweiten Lauf wegen eines platten Hinterreifens vorzeitig
+  beenden und kam somit nicht mit auf das Siegertreppchen. Jonas Schulte-Greving
+  belegte in beiden Rennen den 1. Platz, dahinter konnten sich Frank Langenhorst,
+  Stefan Hußmann und Andreas Punsmann platzieren.
+</p>
+<p align="justify">
+  In der Kartklasse lag Benjamin Schneider nach dem Training vorn und konnte
+  beim ersten Lauf einen Sieg einfahren. Leider war sein Kart anschließend wegen
+  eines Kupplungsschadens nicht mehr einsatzbereit und er konnte um den
+  Tagessieg nicht mehr mitkämpfen. Im zweiten 2 Lauf siegte dann Victor Roh vor
+  Hartmut Kehring.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.05.26_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2019.05.26_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Jonas Schulte-Greving</li>
+   		<li>2. Frank Langenhorst</li>
+   		<li>3. Stefan Hussman</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Victor Roh</li>
+      <li>2. Hartmut Kehring</li>
+      <li>-</li>
+      <li>-</li>
+   </ul>
+</div>
 
 <h3 align="center">1. Lauf um den Jahrespokal des EMC am 22. April 2019</h3>
-
 <p align="justify">
   Der 1. Lauf zum EMC Pokal wurde traditionell am Ostermontag durchgeführt. An
   diesem 22. April waren 8 Fahrer in der Goggo-Klasse und 5 Fahrer in der
@@ -26,16 +65,13 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Fahrzeug mit ca. 70 PS wird er auch in diesem Jahr wieder bei den
   Rasenmäher-Rennen antreten.
 </p>
-
 <p align="justify">
   In der Goggo-Klasse beherrschte Matthias Schulte-Bocholt das Training und fuhr
   bei den Rennen zwei Start-Ziel-Siege ein. Frank Langenhorst belegte im ersten
   Lauf den 2. Platz, fiel aber im zweiten Lauf aus und konnte daher dieses gute
   Ergebnis für den Tagessieg nicht umsetzen. Nach den Platzierungen im zweiten
   Lauf ergaben sich die Tagessieger wie unten dargestellt.
-
 </p>
-
 <p align="justify">
   In der Kartklasse lag Benjamin Schneider nach dem Training vorn und konnte
   ebenfalls zwei Start-Ziel-Siege einfahren. Victor Roh belegte jeweils den
@@ -45,7 +81,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Unser Stammfahrer Hartmut Kehring fiel im zweiten Lauf mit Bremsproblemen aus
   und landete auf dem 5. Platz.
 </p>
-
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
            <img src="img/rennen/2019.04.22_goggo.jpg" alt="Sieger Goggo" />
@@ -56,7 +91,6 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
            <figcaption>Tagessieger Kart</figcaption>
       </figure>
 </figure>
-
 <div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
    <ul>
     	<li>1. Matthias Schulte-Bocholt</li>
