--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   In der Kartklasse lag Benjamin Schneider nach dem Training vorn und konnte
   beim ersten Lauf einen Sieg einfahren. Leider war sein Kart anschließend wegen
   eines Kupplungsschadens nicht mehr einsatzbereit und er konnte um den
-  Tagessieg nicht mehr mitkämpfen. Im zweiten 2 Lauf siegte dann Victor Roh vor
+  Tagessieg nicht mehr mitkämpfen. Im zweiten Lauf siegte dann Victor Roh vor
   Hartmut Kehring.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
