--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_06.19.jpg" alt="Protokoll 06.2019">
 <img src="img/intern/emc_vers_05.19_1.jpg" alt="Protokoll 03.2019_1">
 <img src="img/intern/emc_vers_05.19_2.jpg" alt="Protokoll 03.2019_2">
 <img src="img/intern/emc_vers_05.19_3.jpg" alt="Protokoll 03.2019_3">
