--- a/index.html
+++ b/index.html
@@ -8,6 +8,48 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 10. Juni 2019</h3>
+<p align="justify">
+  Der 3. Lauf zum EMC Pokal wurde am Pfingstmontag, den 10. Juni durchgeführt.
+  In der Goggo-Klasse gingen 10 Fahrer an den Start. In der Kartklasse wurden
+  das Feld neben unseren 3 Stammfahrern durch unsere Freunde aus dem Sauerland
+  sowie einen weiteren Gastfahrer aufgefüllt. Den Zuschauern wurden bei
+  sommerlichem Wetter spannende Rennen geboten.
+</p>
+<p align="justify">
+  In der Goggo-Klasse war Matthias Schulte-Bocholt wieder angetreten und konnte
+  beide Läufe für sich entscheiden. Die weiteren Positionen im zweiten für den
+  Tagespokal entscheidenden Lauf belegten Jonas Schulte-Greving, Hubert Volks
+  und Stefan Hussmann.
+</p>
+<p align="justify">
+  In der Kartklasse konnte Benjamin Schneider vor Victor Roh zwei Siege
+  einfahren. Den dritten Platz belegte Gastfahrer Sebastian Bergendahl vor
+  Hartmut Kehring.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.06.10_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2019.06.10_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Jonas Schulte-Greving</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Stefan Hussmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Sebastian Bergendahl</li>
+      <li>4. Hartmut Kehring</li>
+   </ul>
+</div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 26. Mai 2019</h3>
 <p align="justify">
   Der 2. Lauf zum EMC Pokal wurde am 26. Mai durchgeführt. 6 Fahrer gingen in
