--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
+<h3 align="center">34. Lauf um den Jahrespokal des EMC am 07. September 2019</h3>
+<p align="justify">
+  Der 4. Lauf zum EMC Pokal wurde am Samstag, den 07. September durchgeführt. In
+  der Goggo-Klasse gingen 5 Fahrer und in der Kartklasse 3 Fahrer an den Start.
+  Auf vielfachen Wunsch wurde der Termin auf einen Samstag gelegt, um
+  anschließend den Tag bei einem gemütlichen Zusammensein am Holzkohlengrill
+  ausklingen zu lassen. Leider hatten sich nur wenige Mitglieder eingefunden,
+  trotzdem hatten wir bei gutem Wetter einen spannenden Renntag und einen
+  schönen Grillabend.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Christoph Markfort zwei Siege einfahren. Hubert
+  Volks war zwar schneller, verpatzte aber im ersten Lauf den Start und musste
+  beim zweiten Lauf in Führung liegend wegen Motorschaden aufgeben. Die weiteren
+  Positionen im zweiten für den Tagespokal entscheidenden Lauf belegten Reinhold
+  Markfort, Hubert Volks und Andreas Punsmann.
+</p>
+<p align="justify">
+  In der Kartklasse konnte Benjamin Schneider vor Victor Roh zwei Siege
+  einfahren. Den dritten Platz belegte Hartmut Kehring.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.09.07_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2019.09.07_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Christoph Markfort</li>
+   		<li>2. Reinhold Markfort</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Hartmut Kehring</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">3. Lauf um den Jahrespokal des EMC am 10. Juni 2019</h3>
 <p align="justify">
   Der 3. Lauf zum EMC Pokal wurde am Pfingstmontag, den 10. Juni durchgeführt.
