--- a/index.html
+++ b/index.html
@@ -8,6 +8,52 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 06. Oktober 2019</h3>
+<p align="justify">
+  Der 5. Lauf zum EMC Pokal wurde am Sonntag, den 06. Oktober durchgeführt. In
+  der Goggo-Klasse gingen 4 Fahrer an den Start. Das Kart-Rennen musste wegen
+  Erkrankung mehrerer Fahrer leider ausfallen. Das nasse Herbstwetter machte die
+  Fahrbahn sehr rutschig und es musste entsprechend vorsichtig gefahren werden.
+  Die relativ langsamen Rundenzeiten spiegeln die Gefahr eines Ausrutschers auf
+  der Strecke wider.
+</p>
+<p align="justify">
+  Christoph Markfort kam als „alter Hase“ mit den widrigen Streckenverhältnissen
+  am besten zurecht und konnte zwei Siege einfahren. Die weiteren Positionen im
+  zweiten für den Tagespokal entscheidenden Lauf belegten Frank Langenhorst,
+  Reinhold Markfort, und Andreas Punsmann.
+</p>
+<p align="justify">
+  Mit dem letzten Lauf in diesem Jahr stehen nun auch die Jahressieger fest. Wir
+  gratulieren zum Jahrespokal:
+</p>
+<p align="center">
+  Goggo-Klasse:	Christoph Markfort
+  Kart-Klasse:	Benjamin Schneider
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.09.07_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2019.09.07_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Christoph Markfort</li>
+   		<li>2. Reinhold Markfort</li>
+   		<li>3. Hubert Volks</li>
+   		<li>4. Andreas Punsmann</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Hartmut Kehring</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 07. September 2019</h3>
 <p align="justify">
   Der 4. Lauf zum EMC Pokal wurde am Samstag, den 07. September durchgeführt. In
