--- a/index.html
+++ b/index.html
@@ -32,24 +32,17 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Kart-Klasse:	Benjamin Schneider
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
-      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
-           <img src="img/rennen/2019.09.07_goggo.jpg" alt="Sieger Goggo" />
+      <figure class="einzel1">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2019.10.16_goggo.jpg" alt="Sieger Goggo" />
            <figcaption>Tagessieger Goggo</figcaption>
-      </figure>
-      <figure class="einzel2">
-           <img src="img/rennen/2019.09.07_kart.jpg" alt="Sieger Kart" />
-           <figcaption>Tagessieger Kart</figcaption>
       </figure>
 </figure>
 <div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
    <ul>
     	<li>1. Christoph Markfort</li>
-   		<li>2. Reinhold Markfort</li>
-   		<li>3. Hubert Volks</li>
+   		<li>2. Frank Langenhorst</li>
+   		<li>3. Reinhold Markfort</li>
    		<li>4. Andreas Punsmann</li>
-   		<li>1. Benjamin Schneider</li>
-      <li>2. Victor Roh</li>
-      <li>3. Hartmut Kehring</li>
       <li></li>
    </ul>
 </div>
