--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_11.19.jpg" alt="Protokoll 11.2019">
 <img src="img/intern/emc_vers_09.19.jpg" alt="Protokoll 09.2019">
 <img src="img/intern/emc_vers_07.19.jpg" alt="Protokoll 07.2019">
 <img src="img/intern/emc_vers_06.19.jpg" alt="Protokoll 06.2019">
