--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,8 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_12.19_1.jpg" alt="Protokoll 12.2019_1">
+<img src="img/intern/emc_vers_12.19_2.jpg" alt="Protokoll 12.2019_2">
 <img src="img/intern/emc_vers_11.19.jpg" alt="Protokoll 11.2019">
 <img src="img/intern/emc_vers_09.19.jpg" alt="Protokoll 09.2019">
 <img src="img/intern/emc_vers_07.19.jpg" alt="Protokoll 07.2019">
