--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2019
+title: Termine 2020
 description:
 ---
 
@@ -22,58 +22,58 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>7. Februar</td>
+        <td>6. Februar</td>
         <td>-</td>
       </tr>
       <tr>
         <td>März</td>
-        <td>7. März</td>
+        <td>5. März</td>
         <td>-</td>
       </tr>
       <tr>
         <td>April</td>
-        <td>4. April</td>
-        <td>22. April (Ostermontag)</td>
+        <td>2. April</td>
+        <td>13. April (Ostermontag)</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>2. Mai</td>
-        <td>26. Mai</td>
+        <td>7. Mai</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>6. Juni</td>
-        <td>10. Juni (Pfingstmontag)</td>
+        <td>4. Juni</td>
+        <td>1. Juni (Pfingstmontag) und 21.06 (geplant)</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>-</td>
+        <td>2.</td>
         <td>-</td>
       </tr>
       <tr>
         <td>August</td>
         <td>-</td>
-        <td>-</td>
+        <td>22. oder 29.8 Samstag (geplant)</td>
       </tr>
       <tr>
         <td>September</td>
-        <td>5. September</td>
-        <td>7. September</td>
+        <td>3. September</td>
+        <td>27. September (geplant)</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>10. Oktober</td>
-        <td>6. Oktober</td>
+        <td>1. Oktober</td>
+        <td>4. Oktober (Alternative zu 27.09.)</td>
       </tr>
       <tr>
         <td>November</td>
-        <td>7. November</td>
+        <td>5. November</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>5. Dezember (Jahreshauptversammlung)<br>
-            15. Dezember (Weihnachtsfeier)</td>
+        <td>3. Dezember (Jahreshauptversammlung)<br>
+            13. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
     </tbody>
