--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@ title: Willkommen beim Erler Motor Club
 description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
 
+<!--                         Das Jahr 2020                                -->
+<!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2020</h2>
+
+<p align="center"><font color="#FF0000"><b>
+  Mitten in den Vorbereitungen für die aktuelle Saison werden wir vom Corona-
+  Virus überrascht. Während wir bei unserem letzten Treffen vor zwei Wochen
+  noch das traditionelle Spanferkelessen auf Jörg's Deele und auch das
+  Osterrennen geplant hatten überschlagen sich nun die Ereignisse. Im Hinblick
+  auf unser aller Gesundheit und auch im Sinne der behördlichen Anweisungen <br>
+  müssen wir leider alle Termine absagen!<br>
+  Die unter dem Link "Termine" genannten Daten sind somit nicht mehr gültig. Wir
+  hoffen auf eine baldige Besserung der Situation und werden uns dann mit
+  der neuen Terminplanung zurückmelden.<br>
+</b></font></p>
 <!--                         Das Jahr 2019                                -->
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2019</h2>
