--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2020</h2>
 
+<p align="center"><font color="#008000"><b>
+  Durch die Corona Pandemie konnten wir unsere diesjährige Rennsaison bisher
+  leider nicht starten, unsere traditionellen Rennen an Osten und Pfingsten
+  mussten daher ausfallen. Inzwischen lassen die gesetzlichen Vorschriften
+  wieder Veranstaltungen unter entsprechenden Sicherheitsvorkehrungen zu und wir
+  wollen unter diesen Voraussetzungen den Rennbetrieb wieder aufnehmen. In einer
+  erstene Versammlung am 2. Juli wurden die neuen Termine für das restliche Jahr
+  festgelegt.
+  Die neuen Daten sind unter dem Link "Termine".<br>
+</b></font></p>
+
 <p align="center"><font color="#FF0000"><b>
   Mitten in den Vorbereitungen für die aktuelle Saison werden wir vom Corona-
   Virus überrascht. Während wir bei unserem letzten Treffen vor zwei Wochen
