--- a/termine.html
+++ b/termine.html
@@ -32,38 +32,38 @@ description:
       </tr>
       <tr>
         <td>April</td>
-        <td>2. April</td>
-        <td>13. April (Ostermontag)</td>
+        <td>2. April ausgefallen</td>
+        <td>13. April (Ostermontag) ausgefallen</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>7. Mai</td>
+        <td>7. Mai ausgefallen</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>4. Juni</td>
-        <td>1. Juni (Pfingstmontag) und 21.06 (geplant)</td>
+        <td>4. Juni ausgefallen</td>
+        <td>1. Juni (Pfingstmontag) ausgefallen</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>2.</td>
+        <td>2. Juli</td>
         <td>-</td>
       </tr>
       <tr>
         <td>August</td>
         <td>-</td>
-        <td>22. oder 29.8 Samstag (geplant)</td>
+        <td>Samstag, 1. August, 15:00 Uhr und <br> Samstag, 22. August, 15:00 Uhr</td>
       </tr>
       <tr>
         <td>September</td>
         <td>3. September</td>
-        <td>27. September (geplant)</td>
+        <td>13. September</td>
       </tr>
       <tr>
         <td>Oktober</td>
         <td>1. Oktober</td>
-        <td>4. Oktober (Alternative zu 27.09.)</td>
+        <td>4. Oktober</td>
       </tr>
       <tr>
         <td>November</td>
