--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   wollen unter diesen Voraussetzungen den Rennbetrieb wieder aufnehmen. In einer
   erstene Versammlung am 2. Juli wurden die neuen Termine für das restliche Jahr
   festgelegt.
-  Die neuen Daten sind unter dem Link "Termine".<br>
+  Die neuen Daten finden sich unter dem Link "Termine".<br>
 </b></font></p>
 
 <p align="center"><font color="#FF0000"><b>
