--- a/termine.html
+++ b/termine.html
@@ -53,7 +53,7 @@ description:
       <tr>
         <td>August</td>
         <td>-</td>
-        <td>Samstag, 1. August, 15:00 Uhr und <br> Samstag, 22. August, 15:00 Uhr</td>
+        <td>Samstag, 1. August, 15:00 Uhr <br> Samstag, 22. August, 15:00 Uhr</td>
       </tr>
       <tr>
         <td>September</td>
