--- a/ergebnisse.html
+++ b/ergebnisse.html
@@ -6,7 +6,7 @@ description:
 
 <!--               aktuelle Punktetabelle vom laufenden Jahr                 -->
 <!----------------------------------------------------------------------------->
-<img src="img/punkte/punkte_2019.jpg" alt="aktuelle Punktetabelle">
+<img src="img/punkte/punkte_2020.jpg" alt="aktuelle Punktetabelle">
 
 <!--               Tabelle der Jahressieger (letzte 5 Jahre)                 -->
 <!----------------------------------------------------------------------------->
@@ -19,6 +19,11 @@ description:
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td>2019</td>
+      <td>Christoph Markfort</td>
+      <td>Benjamin Schneider</td>
+    </tr>
     <tr>
       <td>2018</td>
       <td>Matthias Schulte-Bocholt</td>
@@ -37,11 +42,6 @@ description:
     <tr>
       <td>2015</td>
       <td>Matthias Schulte-Bocholt</td>
-      <td>Benjamin Schneider</td>
-    </tr>
-    <tr>
-      <td>2014</td>
-      <td>Walter Huhn</td>
       <td>Benjamin Schneider</td>
     </tr>
   </tbody>
