--- a/index.html
+++ b/index.html
@@ -8,6 +8,47 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2020</h2>
 
+<h3 align="center">3. Lauf um den Jahrespokal des EMC am 22. August 2020</h3>
+<p align="justify">
+  Der 3. Lauf zum EMC Pokal wurde am Samstag, den 22. August durchgeführt. In
+  der Goggo-Klasse sowie auch in der Kart-Klasse gingen jeweils 7 Fahrer an den
+  Start. Der 3. Lauf fand unter Berücksichtugung der Corona-Einschränkungen
+  statt, diese wurden von den Vereinsmitgliedern und Zuschauern eingehalten.
+</p>
+<p align="justify">
+  In der Goggo-Klasse konnte Matthias Schulte-Bocholt zwei Siege einfahren. Die
+  weiteren Positionen im zweiten für den Tagespokal entscheidenden Lauf belegten
+  Hubert Volks, Jonas Schulte-Greving und Frank Langenhorst.
+</p>
+<p align="justify">
+  In der Kartklase traten neben 4 Vereinsfahrern auch 3 Gastfahrer an. Benjamin
+  Schneider konnte vor Victor Roh zwei Siege einfahren. Den dritten Platz
+  belegte Hartmut Kehring vor dem Gastfahrer Thomas Plaschke.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2020.08.22_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2020.08.22_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Jonas Schulte-Greving</li>
+   		<li>4. Frank Langenhorst</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Victor Roh</li>
+      <li>3. Hartmut Kehring</li>
+      <li>4. Thomas Plaschke</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">2. Lauf um den Jahrespokal des EMC am 01. August 2020</h3>
 <p align="justify">
   Der 2. Lauf zum EMC Pokal wurde am Samstag, den 01. August durchgeführt. In
@@ -18,11 +59,11 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <p align="justify">
   In der Goggo-Klasse konnte Matthias Schulte-Bocholt zwei Siege einfahren. Die
   weiteren Positionen im zweiten für den Tagespokal entscheidenden Lauf belegten
-  Jonas Schulte-Greving, Hubert Volks, und Christoph Markfort.
+  Jonas Schulte-Greving, Hubert Volks und Christoph Markfort.
 </p>
 <p align="justify">
   In der Kartklasse konnte Benjamin Schneider vor Victor Roh zwei Siege
-  einfahren. Den dritten Platz belegte Hartmut Kehring vor dem Gastfahrer Timo
+  einfahren. Den dritten Platz belegte Hartmut Kehring vor dem Gastfahrer Tino
   Treinen.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
