--- a/index.html
+++ b/index.html
@@ -8,6 +8,53 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2020</h2>
 
+<h3 align="center">4. Lauf um den Jahrespokal des EMC am 13. September 2020</h3>
+<p align="justify">
+  Der 4. Lauf zum EMC Pokal wurde am Sonntag, den 13. September durchgeführt.
+  Die Goggo-Klasse war bedingt durch den Ernteeinsatz der Mitglieder mit
+  nur 4 Fahren schwach vertreten. Die Kartklasse hingegen wurde durch 6
+  Gastfahrer verstärkt, somit gingen hier 9 Fahrzeuge an den Start und sorgten
+  für spannende Rennen. Auch der 4. Lauf fand unter Berücksichtugung der Corona
+  -Einschränkungen statt, diese wurden sowohl von den Vereinsmitgliedern wie
+  auch von den Zuschauern eingehalten.
+</p>
+<p align="justify">
+  In der Goggo-Klasse musste Christoph Markfort leider nach dem Training mit
+  Motorschaden aufgeben. Von den drei restlichen Fahrern siegte in beiden Läufen
+  Frank Langenhorst vor Andreas Punsmann und Dominik Korte.
+</p>
+<p align="justify">
+  In der Kartklase mussten die Gastfahrer erkennen, dass 3 Fahrzeuge nebeneinander
+  in der Kurve zuviel sein können und dies führte dann zu der einen oder anderen
+  Kollision. Bis zum nächsten Rennen dürften die Schäden aber wieder behoben
+  sein und man wird mit etwas mehr Rücksicht an den Start gehen. Benjamin
+  Schneider konnte Dirk Cordes und Victor Roh zwei Siege einfahren. Den vierten
+  Platz belegte Mike Brüggemann.
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2020.09.13_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2020.09.13_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Frank Langenhorst</li>
+   		<li>2. Andreas Punsmann</li>
+   		<li>3. Dominik Korte</li>
+   		<li></li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Dirk Cordes</li>
+      <li>3. Victor Roh</li>
+      <li>4. Mike Brüggemann</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">3. Lauf um den Jahrespokal des EMC am 22. August 2020</h3>
 <p align="justify">
   Der 3. Lauf zum EMC Pokal wurde am Samstag, den 22. August durchgeführt. In
