--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   in der Kurve zuviel sein können und dies führte dann zu der einen oder anderen
   Kollision. Bis zum nächsten Rennen dürften die Schäden aber wieder behoben
   sein und man wird mit etwas mehr Rücksicht an den Start gehen. Benjamin
-  Schneider konnte Dirk Cordes und Victor Roh zwei Siege einfahren. Den vierten
-  Platz belegte Mike Brüggemann.
+  Schneider konnte vor Dirk Cordes und Victor Roh zwei Siege einfahren. Den
+  vierten Platz belegte Mike Brüggemann.
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
