--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2020</h2>
 
+<h3 align="center">5. Lauf um den Jahrespokal des EMC am 04. Oktober 2020</h3>
+<p align="justify">
+  Der 5. Lauf zum EMC Pokal wurde am Sonntag, den 04. Oktober durchgeführt.
+  Die Goggo-Klasse war mit nur 3 Fahren vertreten. Die Kartklasse wurde wieder
+  durch Gastfahrer verstärkt, hier gingen 6 Fahrzeuge an den Start. Auch der 5.
+  Lauf fand unter Berücksichtugung der Corona-Einschränkungen statt, die sowohl
+  von den Vereinsmitgliedern wie auch von den Zuschauern eingehalten wurden.
+</p>
+<p align="justify">
+  In der Goggo-Klasse siegte in beiden Läufen Matthias Schulte-Bocholt vorn
+  Hubert Volks und Andreas Punsman.
+</p>
+<p align="justify">
+  In der Kartklasse lag im ersten Lauf Benjamin Schneider vorne, musste aber im
+  zweiten Lauf in Führung liegend wegen Kettenschaden das Rennen vorzeitig
+  beenden. Hartmut Kehring war vorher schon durch eine technischen Defekt
+  ausgefallen. Victor Roh fuhr den Tagessieg ein vor Tino Treinen, Jerome
+  Kura und Horst Primas.
+</p>
+<p align="justify">
+  Nach dem letzten Rennen in diesem Jahr stehen die Jahrssieger 2020 fest. Wir
+  gratulieren zum Jahrespokal: 
+</p>
+<p align="center">
+  Goggo-Klasse:	Matthias Schulte Bocholt
+  <br>
+  Kart-Klasse:	Benjamin Schneider
+</p>
+<figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
+      <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
+           <img src="img/rennen/2020.09.13_goggo.jpg" alt="Sieger Goggo" />
+           <figcaption>Tagessieger Goggo</figcaption>
+      </figure>
+      <figure class="einzel2">
+           <img src="img/rennen/2020.09.13_kart.jpg" alt="Sieger Kart" />
+           <figcaption>Tagessieger Kart</figcaption>
+      </figure>
+</figure>
+<div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
+   <ul>
+    	<li>1. Frank Langenhorst</li>
+   		<li>2. Andreas Punsmann</li>
+   		<li>3. Dominik Korte</li>
+   		<li>4. -</li>
+   		<li>1. Benjamin Schneider</li>
+      <li>2. Dirk Cordes</li>
+      <li>3. Victor Roh</li>
+      <li>4. Mike Brüggemann</li>
+      <li></li>
+   </ul>
+</div>
+
 <h3 align="center">4. Lauf um den Jahrespokal des EMC am 13. September 2020</h3>
 <p align="justify">
   Der 4. Lauf zum EMC Pokal wurde am Sonntag, den 13. September durchgeführt.
@@ -24,7 +76,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
   Frank Langenhorst vor Andreas Punsmann und Dominik Korte.
 </p>
 <p align="justify">
-  In der Kartklase mussten die Gastfahrer erkennen, dass 3 Fahrzeuge nebeneinander
+  In der Kartklasse mussten die Gastfahrer erkennen, dass 3 Fahrzeuge nebeneinander
   in der Kurve zuviel sein können und dies führte dann zu der einen oder anderen
   Kollision. Bis zum nächsten Rennen dürften die Schäden aber wieder behoben
   sein und man wird mit etwas mehr Rücksicht an den Start gehen. Benjamin
