--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 </p>
 <p align="justify">
   Nach dem letzten Rennen in diesem Jahr stehen die Jahrssieger 2020 fest. Wir
-  gratulieren zum Jahrespokal: 
+  gratulieren zum Jahrespokal:
 </p>
 <p align="center">
   Goggo-Klasse:	Matthias Schulte Bocholt
@@ -38,24 +38,24 @@ description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 </p>
 <figure class="gesamt">           <!-- 2 Bilder nebeneinander anordnen -->
       <figure class="einzel2">    <!-- Originalgröße 1630 x 1400 einstellen -->
-           <img src="img/rennen/2020.09.13_goggo.jpg" alt="Sieger Goggo" />
+           <img src="img/rennen/2020.10.04_goggo.jpg" alt="Sieger Goggo" />
            <figcaption>Tagessieger Goggo</figcaption>
       </figure>
       <figure class="einzel2">
-           <img src="img/rennen/2020.09.13_kart.jpg" alt="Sieger Kart" />
+           <img src="img/rennen/2020.10.04_kart.jpg" alt="Sieger Kart" />
            <figcaption>Tagessieger Kart</figcaption>
       </figure>
 </figure>
 <div class="textspalten2">       <!-- Bildunterschrift in 2 Spalten anordnen -->
    <ul>
-    	<li>1. Frank Langenhorst</li>
-   		<li>2. Andreas Punsmann</li>
-   		<li>3. Dominik Korte</li>
+    	<li>1. Matthias Schulte-Bocholt</li>
+   		<li>2. Hubert Volks</li>
+   		<li>3. Andreas Punsman</li>
    		<li>4. -</li>
-   		<li>1. Benjamin Schneider</li>
-      <li>2. Dirk Cordes</li>
-      <li>3. Victor Roh</li>
-      <li>4. Mike Brüggemann</li>
+   		<li>1. Victor Roh</li>
+      <li>2. Tino Treinen</li>
+      <li>3. Jerome Kura</li>
+      <li>4. Horst Primas</li>
       <li></li>
    </ul>
 </div>
