--- a/intern.html
+++ b/intern.html
@@ -2,6 +2,7 @@
 layout: default
 title: Interne Nachrichten des Erler Motor Clubs
 ---
+<img src="img/intern/emc_vers_10.20.jpg" alt="Protokoll 10.2020">
 <img src="img/intern/emc_vers_09.20.jpg" alt="Protokoll 09.2020">
 <img src="img/intern/emc_vers_07.20.jpg" alt="Protokoll 07.2020">
 <img src="img/intern/emc_vers_03.20.jpg" alt="Protokoll 03.2020">
