--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@ title: Willkommen beim Erler Motor Club
 description: Kartsport mit "Goggo"-Karts und konventionellen Karts
 ---
 
+<!--                         Das Jahr 2021                                -->
+<!-------------------------------------------------------------------------->
+<h2 align="center">Das Jahr 2021</h2>
+
+<p align="center"><font color="#FF0000"><b>
+Wie auch schon im letzten Jahr konnten wir durch die Corona Pandemie unsere
+diesjährige Rennsaison bisher leider nicht starten. Die traditionellen Rennen an
+Osten und Pfingsten mussten daher ausfallen. Inzwischen lassen die gesetzlichen
+Vorschriften wieder Veranstaltungen unter entsprechenden Sicherheitsvorkehrungen
+zu und wir wollen unter diesen Voraussetzungen den Rennbetrieb wieder aufnehmen.
+</b></font></p>
+
+<p align="center"><font color="#FF0000"><b>
+Die erste Versammlung ist für den 10. Juni in unserem Vereinslokal geplant. Die
+ersten Rennen sollen am 20. Juni und am 4. Juli stattfinden. Diese Termine können
+sich im Hinblick auf die Corona Situation natürlich kurzfristig ändern. Das
+weitere Vorgehen wird Thema unserer ersten Versammlung sein, ebenso besteht
+Nachholbedarf für unsere ausgefallene Jahreshauptversammlung 2020.
+</b></font></p>
+
 <!--                         Das Jahr 2020                                -->
 <!-------------------------------------------------------------------------->
 <h2 align="center">Das Jahr 2020</h2>
