--- a/termine.html
+++ b/termine.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Termine 2020
+title: Termine 2021
 description:
 ---
 
@@ -22,58 +22,58 @@ description:
       </tr>
       <tr>
         <td>Februar</td>
-        <td>6. Februar</td>
+        <td>ausgefallen wegen Corona</td>
         <td>-</td>
       </tr>
       <tr>
         <td>März</td>
-        <td>5. März</td>
+        <td>ausgefallen wegen Corona</td>
         <td>-</td>
       </tr>
       <tr>
         <td>April</td>
-        <td>2. April ausgefallen</td>
-        <td>13. April (Ostermontag) ausgefallen</td>
+        <td>ausgefallen wegen Corona</td>
+        <td>Ostermontag ausgefallen</td>
       </tr>
       <tr>
         <td>Mai</td>
-        <td>7. Mai ausgefallen</td>
-        <td>-</td>
+        <td>ausgefallen wegen Corona</td>
+        <td>Pfingstmontag ausgefallen</td>
       </tr>
       <tr>
         <td>Juni</td>
-        <td>4. Juni ausgefallen</td>
-        <td>1. Juni (Pfingstmontag) ausgefallen</td>
+        <td>10. Juni</td>
+        <td>20. Juni 1.Rennen</td>
       </tr>
       <tr>
         <td>Juli</td>
-        <td>2. Juli</td>
-        <td>-</td>
+        <td>1. Juli</td>
+        <td>4. Juli 2. Rennen</td>
       </tr>
       <tr>
         <td>August</td>
-        <td>-</td>
-        <td>Samstag, 1. August, 15:00 Uhr <br> Samstag, 22. August, 15:00 Uhr</td>
+        <td>5. August</td>
+        <td>noch nicht bekannt</td>
       </tr>
       <tr>
         <td>September</td>
-        <td>3. September</td>
-        <td>13. September</td>
+        <td>2. September</td>
+        <td>noch nicht bekannt</td>
       </tr>
       <tr>
         <td>Oktober</td>
-        <td>1. Oktober</td>
-        <td>4. Oktober</td>
+        <td>7. Oktober</td>
+        <td>noch nicht bekannt</td>
       </tr>
       <tr>
         <td>November</td>
-        <td>5. November</td>
+        <td>4. November</td>
         <td>-</td>
       </tr>
       <tr>
         <td>Dezember</td>
-        <td>3. Dezember (Jahreshauptversammlung)<br>
-            13. Dezember (Weihnachtsfeier)</td>
+        <td>2. Dezember (Jahreshauptversammlung)<br>
+            12. Dezember (Weihnachtsfeier)</td>
         <td>-</td>
       </tr>
     </tbody>
